--- a/index.html
+++ b/index.html
@@ -13,9 +13,13 @@
 </head>
 
 <body>
-    <div class="header">
+    <!-- changed div class="header" to <header> tag 
+        bhaney 2/21/21-->
+    <header>
         <h1>Hori<span class="seo">seo</span>n</h1>
-        <div>
+        <!-- change div tag to nav tag
+        bhaney 2/21/21-->
+        <nav>
             <ul>
                 <li>
                     <a href="#search-engine-optimization">Search Engine Optimization</a>
@@ -27,68 +31,86 @@
                     <a href="#social-media-marketing">Social Media Marketing</a>
                 </li>
             </ul>
-        </div>
-    </div>
-    <div class="hero"></div>
-    <div class="content">
-        <div class="search-engine-optimization">
-            <img src="./assets/images/search-engine-optimization.jpg" alt="Search Engine Optimization" class="float-left" />
-            <h2>Search Engine Optimization</h2>
-            <p>
-                The dominance of mobile internet use means that users are searching for the right business as they travel, shop, or sit on their couch at home. Search Engine Optimization (SEO) allows you to increase your visibility and find the right customers for your business.
-            </p>
-        </div>
-        <div id="online-reputation-management" class="online-reputation-management">
-            <!-- added alt attribute  
-            bhaney 2/19/2021-->
-            <img src="./assets/images/online-reputation-management.jpg" alt = "Online Reputation Management" class="float-right" />
-            <h2>Online Reputation Management</h2>
-            <p>
-                The web is full of opinions, and some of these can be negative. Social media allows anyone with an internet connection to say whatever they want about your business. Online Reputation Management gives you the control over what potential customers see when they search for your business.
-            </p>
-        </div>
-        <div id="social-media-marketing" class="social-media-marketing">
-            <!-- added alt attribute -->
-            <img src="./assets/images/social-media-marketing.jpg" alt="Social Media Marketing" class="float-left" />
-            <h2>Social Media Marketing</h2>
-            <p>
-                Social media continues to have a sizable influence on buying habits. Social media marketing helps you determine which platforms are suited to your brand, using analytics to find the right markets and increase your lead generation.
-            </p>
-        </div>
-    </div>
-    <div class="benefits">
-        <div class="benefit-lead">
-            <h3>Lead Generation</h3>
-            <!-- added alt attribute -->
-            <img src="./assets/images/lead-generation.png" alt="Lead Generation"/>
-            <p>
-                Inbound strategies for lead generation require less work for your business, bringing customers directly to your website.
-            </p>
-        </div>
-        <div class="benefit-brand">
-            <h3>Brand Awareness</h3>
-            <!-- added alt attribute -->
-            <img src="./assets/images/brand-awareness.png" alt="Brand Awareness" />
-            <p>
-                Users find your business through paid and organic searches, increasing the search ranking and visibility for your business.
-            </p>
-        </div>
-        <div class="benefit-cost">
-            <h3>Cost Management</h3>
-            <!-- added alt attribute -->
-            <!-- note to self--why is there a close image tag?? -->
-            <img src="./assets/images/cost-management.png" alt="Cost Management"></img>
-            <p>
-                As the search ranking for your business increases, your advertising costs decrease, and you no longer need to advertise your page.
-            </p>
-        </div>
-    </div>
-    <div class="footer">
-        <h2>Made with ❤️️ by Horiseon</h2>
+        </nav>
+    </header>
+    <!--change the div tag to a section tag and gave it an id of hero.
+    I figured id was more appropriate than class because there was only
+    one instance on the page. 
+    bhaney 2/21/21-->
+    <section id="hero"></section>
+    <!-- I added a <main> block just to organize the file better.  
+        this is what I would call the main material of the webpage
+    bhaney 2/22/21-->
+    <main>
+    <!-- I revised this from div to class and added an id-->
+        <section class="content" id="services-offered">
+            <section class="service-item">
+                <img src="./assets/images/search-engine-optimization.jpg" alt="Search Engine Optimization" class="float-left" />
+                <h2>Search Engine Optimization</h2>
+                <p>
+                    The dominance of mobile internet use means that users are searching for the right business as they travel, shop, or sit on their couch at home. Search Engine Optimization (SEO) allows you to increase your visibility and find the right customers for your business.
+                </p>
+            </section>
+            <!--I removed the class here.-->
+            <section class="service-item">
+                <!-- added alt attribute  
+                bhaney 2/19/2021-->
+                <img src="./assets/images/online-reputation-management.jpg" alt = "Online Reputation Management" class="float-right" />
+                <h2>Online Reputation Management</h2>
+                <p>
+                    The web is full of opinions, and some of these can be negative. Social media allows anyone with an internet connection to say whatever they want about your business. Online Reputation Management gives you the control over what potential customers see when they search for your business.
+                </p>
+            </section>
+            <!-- I removed the class here.  It did not seem to require 
+            a class and id with the same name. This should help me simplify the
+            css code
+            bhaney 2/21/21-->
+            <section class="service-item">
+                <!-- added alt attribute -->
+                <img src="./assets/images/social-media-marketing.jpg" alt="Social Media Marketing" class="float-left" />
+                <h2>Social Media Marketing</h2>
+                <p>
+                    Social media continues to have a sizable influence on buying habits. Social media marketing helps you determine which platforms are suited to your brand, using analytics to find the right markets and increase your lead generation.
+                </p>
+            </section>
+        </section>
+        <!-- I changed this to an <aside> block
+            bhaney 2/22/21-->
+        <aside class="content" id="benefits">
+            <section class="benefit-item">
+                <h3>Lead Generation</h3>
+                <!-- added alt attribute -->
+                <img src="./assets/images/lead-generation.png" alt="Lead Generation"/>
+                <p>
+                    Inbound strategies for lead generation require less work for your business, bringing customers directly to your website.
+                </p>
+            </section>
+            <section class="benefit-item">
+                <h3>Brand Awareness</h3>
+                <!-- added alt attribute -->
+                <img src="./assets/images/brand-awareness.png" alt="Brand Awareness" />
+                <p>
+                    Users find your business through paid and organic searches, increasing the search ranking and visibility for your business.
+                </p>
+            </section>
+            <section class="benefit-item">
+                <h3>Cost Management</h3>
+                <!-- added alt attribute -->
+                <!-- note to self--why was there a close image tag??
+                I changed it to be parallel construction with the other image tags -->
+                <img src="./assets/images/cost-management.png" alt="Cost Management"/>
+                <p>
+                    As the search ranking for your business increases, your advertising costs decrease, and you no longer need to advertise your page.
+                </p>
+            </section>
+        </aside>
+    </main>
+    <footer>
+        <h4>Made with ❤️️ by Horiseon</h4>
         <p>
             &copy; 2019 Horiseon Social Solution Services, Inc.
         </p>
-    </div>
+    </footer>
 </body>
 
 </html>
