--- a/index.html
+++ b/index.html
@@ -44,15 +44,14 @@
     <main>
     <!-- I revised this from div to class and added an id-->
         <section class="content" id="services-offered">
-            <section class="service-item">
+            <section class="service-item" id="search-engine-optimization">
                 <img src="./assets/images/search-engine-optimization.jpg" alt="Search Engine Optimization" class="float-left" />
                 <h2>Search Engine Optimization</h2>
                 <p>
                     The dominance of mobile internet use means that users are searching for the right business as they travel, shop, or sit on their couch at home. Search Engine Optimization (SEO) allows you to increase your visibility and find the right customers for your business.
                 </p>
             </section>
-            <!--I removed the class here.-->
-            <section class="service-item">
+            <section class="service-item" id="online-reputation-management">
                 <!-- added alt attribute  
                 bhaney 2/19/2021-->
                 <img src="./assets/images/online-reputation-management.jpg" alt = "Online Reputation Management" class="float-right" />
@@ -61,11 +60,7 @@
                     The web is full of opinions, and some of these can be negative. Social media allows anyone with an internet connection to say whatever they want about your business. Online Reputation Management gives you the control over what potential customers see when they search for your business.
                 </p>
             </section>
-            <!-- I removed the class here.  It did not seem to require 
-            a class and id with the same name. This should help me simplify the
-            css code
-            bhaney 2/21/21-->
-            <section class="service-item">
+            <section class="service-item" id="social-media-marketing">
                 <!-- added alt attribute -->
                 <img src="./assets/images/social-media-marketing.jpg" alt="Social Media Marketing" class="float-left" />
                 <h2>Social Media Marketing</h2>
